# metatemplate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
autogen/: __main__.py  filter.py  git.py  settings.py
autogen/overrides/: __init__.py  custom_class_container.py  custom_types.py  extra_transformer.py  filters.py  generator.py  helpers.py  mapper.py  resolver.py  yaml_mapper.py
autogen/templates/api/types/: <AbstractFactory>.h  _alias.cpp  _all<{type_name}_cpp>.h  _enum.h  _struct.h  _struct:is_abstract<{type_name}Factory>.h  _variant.cpp  _variant.h
autogen/templates/api/utils/: :utils<Stream>.h
autogen/templates/protobuf/types/: :utils<Duration>.proto  :utils<TimePoint>.proto  _enum.proto  _struct.proto
autogen/templates/protobuf_converters/conversions/: <Converter>.h  _alias.cpp  _alias.h  _enum.cpp  _enum.h  _struct.cpp  _struct.h  _variant.cpp  _variant.h
autogen/templates/protobuf_converters/utils/: <Clock>.h  <Duration>.cpp  <Duration>.h  <Native>.h  <PopulateMutex>.h  <TypeMappings>.h  <UUID>.cpp
autogen/templates/python_bindings/: <module>.cpp
autogen/templates/python_bindings/bindings/: <clock>.cpp  _alias.cpp  _enum.cpp  _struct.cpp
metatemplate/: __main__.py  filter.py  git.py  settings.py
metatemplate/overrides/: __init__.py  custom_class_container.py  custom_types.py  extra_transformer.py  filters.py  generator.py  helpers.py
metatemplate/templates/protobuf/: <api>.proto
schemas/xml/: sample.xml
schemas/yaml/: namespace_sample.yaml  sample2.yaml  sample_complex.yaml
(+20 files in other folders)
