[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Nik Delgado <nikdelgado@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
xsdata = {extras = ["cli"], version = "^23.8"}
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
